# SMART_app

./: README.md  deployment-guide.md  docker-compose.yml  fixed-render.yaml  main.py  package.json  relay.py  render.yaml  requirements.txt  wifi-guide.md
Pico/: CMakeLists.txt  dht22.h  main-updated.c  pico-main.c  setup-guide.md  test-connectivity.c
backend/: .env.example  Dockerfile  agriculture_monitor.db  backend-extension.py  main.py  main_cool.py  main_original.py  mainv3\\.py  requirements.txt
backend/app/: __init__.py  database.py  main.py  models.py  sensors.py  weather.py
backend/app/routes/: __init__.py
backend/data/: agriculture_monitor.db
frontend/: Dockerfile  nginx.conf  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json  sw.js
frontend/src/: index.js
